--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
 
     <!-- Anime.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+    <script
+      defer
+      src="https://didiavax.com/script.js"
+      data-website-id="606a2e33-c382-4ce7-aae7-7ae7b75524bd"
+    ></script>
     <style>
       :root {
         --primary-bg: #000000;
@@ -782,7 +787,12 @@
     <!-- About Section -->
     <section
       id="about"
-      style="padding: 6rem 2rem; background: transparent; position: relative; z-index: 1;"
+      style="
+        padding: 6rem 2rem;
+        background: transparent;
+        position: relative;
+        z-index: 1;
+      "
     ></section>
 
     <!-- Features Section -->
@@ -794,7 +804,18 @@
             Building the infrastructure for autonomous intelligence
           </p>
         </div>
-        <div style="max-width: 800px; margin: 0 auto; text-align: center; background: rgba(0, 0, 0, 0.7); padding: 3rem; border-radius: 20px; backdrop-filter: blur(10px); border: 1px solid var(--border-color);">
+        <div
+          style="
+            max-width: 800px;
+            margin: 0 auto;
+            text-align: center;
+            background: rgba(0, 0, 0, 0.7);
+            padding: 3rem;
+            border-radius: 20px;
+            backdrop-filter: blur(10px);
+            border: 1px solid var(--border-color);
+          "
+        >
           <p
             style="
               font-size: 1.25rem;
@@ -842,7 +863,16 @@
             Ready to save hours with custom AI solutions?
           </p>
         </div>
-        <div style="max-width: 600px; margin: 0 auto; background: rgba(124, 58, 237, 0.05); padding: 3rem; border-radius: 20px; border: 1px solid rgba(124, 58, 237, 0.2);">
+        <div
+          style="
+            max-width: 600px;
+            margin: 0 auto;
+            background: rgba(124, 58, 237, 0.05);
+            padding: 3rem;
+            border-radius: 20px;
+            border: 1px solid rgba(124, 58, 237, 0.2);
+          "
+        >
           <p
             style="
               font-size: 1.25rem;
