--- a/index.html
+++ b/index.html
@@ -910,6 +910,7 @@
             <li><a href="#features">Features</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="#about">About Us</a></li>
+            <li><a href="http://blog.agentis.solutions/" target="_blank" rel="noopener noreferrer">Blog</a></li>
           </ul>
         </div>
 
